Add correlation.cpp to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ set(SRCS
     ${SOURCE_DIR}/SSIM.cpp
     ${SOURCE_DIR}/VideoYUV.cpp
     ${SOURCE_DIR}/VIFP.cpp
+    ${SOURCE_DIR}/CORRELATION.cpp
 )
 add_executable(
     ${EXECUTABLE_NAME}
